--- a/src/lib/components/base/buttons/button/variants/default.scss
+++ b/src/lib/components/base/buttons/button/variants/default.scss
@@ -12,6 +12,7 @@
     padding: 2px 6px;
     justify-content: center;
     align-items: center;
+    border:none;
     gap: 4px;
     transition: all 300ms ease-in-out;
 
