--- a/src/lib/components/base/dropDowns/dropDownMenuItem/styles/style.scss
+++ b/src/lib/components/base/dropDowns/dropDownMenuItem/styles/style.scss
@@ -15,6 +15,7 @@
     border-radius: 4px;
     outline: 1px solid transparent;
     background-color: $white-00;
+        border: none;
     gap: 8px;
     position: relative;
     transition: all 300ms ease-in-out;
