--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import './fonts/fonts.css';
 
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 body {
     font-family: 'SF-Pro';
 }
