write tests for all of glare fields components with small css change
css change on size of the ActionBarInputField action button

--- a/src/lib/components/base/fields/ActionBarInputField/style.scss
+++ b/src/lib/components/base/fields/ActionBarInputField/style.scss
@@ -19,4 +19,19 @@
         gap: 4px;
         margin: 0 4px;
     }
+
+    .glare-input-field-wrapper {
+        padding: 0 4px;
+
+        .glare-button {
+            width: 32px;
+            height: 32px;
+
+            .glare-button-icon {
+                width: 26px;
+                font-size: 26px;
+            }
+        }
+    }
+
 }
